--- a/index.html
+++ b/index.html
@@ -14,7 +14,42 @@
   
   <div class="title-bar">Weather Dashboard</div>
 
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-4">
 
+        <form>
+          <div class="mb-3">
+            <label for="search-text" class="form-label"><h4>Search for a City:</h4></label>
+            <input type="text" class="form-control" id="search-text">
+          </div>
+
+          <button id="search" type="submit" class="btn light-blue-btn">Search</button>
+
+        </form>
+
+
+      </div>
+      
+      <div class="col-sm-8">
+
+        <div class="box">
+          <h5>London</h5>
+
+          <div class="temp"></div>
+          <br>
+          <div class="wind"></div>
+          <br>
+          <div class="humidity"></div>
+        </div>
+
+        <h5>5-Day Forecast:</h5>
+
+      </div>
+
+    
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
