Update 5 day forecast buttons

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@
                   <div class="card card-color">
                     <!-- Card content -->
                     <div class="card-body p-1">
-                      <p id="card1-date" class="card-text">15/9/2022</p>
-                      <div>Hello</div>
+                      <p id="card1-date" class="card-text"></p>
+                      <p id="card1-image" class="card-text"></p>
+                      <p id="card1-temp" class="card-text"></p>
+                      <p id="card1-wind" class="card-text"></p>
+                      <p id="card1-humidity" class="card-text"></p>
                     </div>
                   </div>
                 </div>
@@ -79,8 +82,11 @@
                   <div class="card card-color">
                     <!-- Card content -->
                     <div class="card-body p-1">
-                      <p id="card2-date" class="card-text">15/9/2022</p>
-                      <div>Hello</div>
+                      <p id="card2-date" class="card-text"></p>
+                      <p id="card2-image" class="card-text"></p>
+                      <p id="card2-temp" class="card-text"></p>
+                      <p id="card2-wind" class="card-text"></p>
+                      <p id="card2-humidity" class="card-text"></p>
                     </div>
                   </div>
                 </div>
@@ -91,8 +97,11 @@
                   <div class="card card-color">
                     <!-- Card content -->
                     <div class="card-body p-1">
-                      <p id="card3-date" class="card-text">15/9/2022</p>
-                      <div>Hello</div>
+                      <p id="card3-date" class="card-text"></p>
+                      <p id="card3-image" class="card-text"></p>
+                      <p id="card3-temp" class="card-text"></p>
+                      <p id="card3-wind" class="card-text"></p>
+                      <p id="card3-humidity" class="card-text"></p>
                     </div>
                   </div>
                 </div>
@@ -103,8 +112,11 @@
                   <div class="card card-color">
                     <!-- Card content -->
                     <div class="card-body p-1">
-                      <p id="card4-date" class="card-text">15/9/2022</p>
-                      <div>Hello</div>
+                      <p id="card4-date" class="card-text"></p>
+                      <p id="card4-image" class="card-text"></p>
+                      <p id="card4-temp" class="card-text"></p>
+                      <p id="card4-wind" class="card-text"></p>
+                      <p id="card4-humidity" class="card-text"></p>
                     </div>
                   </div>
                 </div>
@@ -115,8 +127,11 @@
                   <div class="card card-color">
                     <!-- Card content -->
                     <div class="card-body p-1">
-                      <p id="card5-date" class="card-text">15/9/2022</p>
-                      <div>Hello</div>
+                      <p id="card5-date" class="card-text"></p>
+                      <p id="card5-image" class="card-text"></p>
+                      <p id="card5-temp" class="card-text"></p>
+                      <p id="card5-wind" class="card-text"></p>
+                      <p id="card5-humidity" class="card-text"></p>
                     </div>
                   </div>
                 </div>
