Fix overlapping boxes

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="col-sm-10 removeSpacing">
               <!-- Your existing content -->
 
-              <div class="row">
+              <div class="row remove-top-spacing">
                 <!-- Start of card loop -->
                 <div class="col-md-2 mb-3 pr-0">
                   <div class="card card-color">
