--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       </div>
 
-      <div id="current-weather-header" class="col-sm-9 hide">
+      <div id="current-weather-header" class="col-sm-9 hide removeSpacing">
 
         <!-- Display a black box and inside display current weather for city -->
         <div class="box">
